--- a/src/main/resources/com/example/real_estate_software/Rent.fxml
+++ b/src/main/resources/com/example/real_estate_software/Rent.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.GridPane?>
 
 <!-- The Rent FXML was created in Scenebuilder which allows the Owner to assign rent to the tenants associated with the property-->
 <!-- The owner will be able to view the number of tenants and assign individual rent amounts and the frequency of the payments -->
@@ -97,33 +98,7 @@
         </HBox>
     </Pane>
 
-    <ImageView fitHeight="70.0" fitWidth="85.0" layoutX="108.0" layoutY="100.0" pickOnBounds="true" preserveRatio="true">
-        <Image url="@images/ProfileIcon.jpg"/>
-    </ImageView>
-    <ImageView fitHeight="70.0" fitWidth="85.0" layoutX="108.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true">
-        <Image url="@images/ProfileIcon.jpg"/>
-    </ImageView>
-    <ImageView fitHeight="70.0" fitWidth="85.0" layoutX="108.0" layoutY="290.0" pickOnBounds="true" preserveRatio="true">
-        <Image url="@images/ProfileIcon.jpg"/>
-    </ImageView>
-    <Text layoutX="203.0" layoutY="113.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TENANT NAME"/>
-    <Text layoutX="203.0" layoutY="207.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TENANT NAME"/>
-    <Text layoutX="203.0" layoutY="303.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TENANT NAME"/>
-    <Text layoutX="195.0" layoutY="135.0" text="Rent Amount"/>
-    <Text layoutX="195.0" layoutY="229.0" text="Rent Amount"/>
-    <Text layoutX="195.0" layoutY="325.0" text="Rent Amount"/>
-
-    <ImageView fitHeight="70.0" fitWidth="85.0" layoutX="400.0" layoutY="112.0" pickOnBounds="true" preserveRatio="true">
-        <Image url="@images/ProfileIcon.jpg"/>
-    </ImageView>
-    <ImageView fitHeight="70.0" fitWidth="85.0" layoutX="400.0" layoutY="206.0" pickOnBounds="true" preserveRatio="true">
-        <Image url="@images/ProfileIcon.jpg"/>
-    </ImageView>
-    <Text layoutX="495.0" layoutY="125.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TENANT NAME"/>
-    <Text layoutX="495.0" layoutY="219.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TENANT NAME"/>
-    <Text layoutX="487.0" layoutY="147.0" text="Rent Amount"/>
-    <Text layoutX="487.0" layoutY="241.0" text="Rent Amount"/>
-
-    <Button layoutX="562.0" layoutY="335.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="70.0" text="Save"/>
+    <GridPane fx:id="tenantGrid" layoutX="92.0" layoutY="117.0" hgap="15.0" vgap="15.0">
+    </GridPane>
 
 </AnchorPane>
